# FastAPI_SQLAlchemy_Temp

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  JSON_model .json  Makefile  README.md  comand  command  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  dependency-update.yml  release.yml
app/: config.py  main.py
app/auth/: models.py  router.py  schemas.py  utils.py
app/dao/: base.py  database.py
app/dependencies/: dao_dep.py
app/migration/: env.py
docs/: CI_CD_SETUP.md  RUFF_GUIDE.md
grafana/: docker-compose.yml  loki-config.yaml  prometheus.yml  promtail-config.yaml
prometheus-data/01K9BX20N6J36BNF308A3FCPN1/: index  meta.json
prometheus-data/01K9E70RVQQ36J36FG71EC8DB0/: index  meta.json
prometheus-data/01K9EHTWJYZGMF4JQ7Q5J8CQJ0/: index  meta.json
prometheus-data/01K9M35PAMEKSJ6JSYPBVVKTYS/: index  meta.json
prometheus-data/01K9M35PAMEKSJ6JSYPBVVKTYS/chunks/: 000001
prometheus-data/01K9P6RH75ZENZD20WHBCK6CD2/: index  meta.json
prometheus-data/01K9P6RH75ZENZD20WHBCK6CD2/chunks/: 000001
prometheus-data/01K9PK79KB8FV0H79MQ5BD86EJ/: index  meta.json
prometheus-data/01K9PK79KB8FV0H79MQ5BD86EJ/chunks/: 000001
prometheus-data/01K9PK79MA75RT0X9V7K42YFQC/: index  meta.json
prometheus-data/01K9PK79MA75RT0X9V7K42YFQC/chunks/: 000001
prometheus-data/01K9PQVX7F3R51KGBXCZD0YYYY/: index  meta.json
prometheus-data/01K9PQVX7F3R51KGBXCZD0YYYY/chunks/: 000001
prometheus-data/01KA0J5523XMBP83BY1BEMN927/: index  meta.json
prometheus-data/01KA0J5523XMBP83BY1BEMN927/chunks/: 000001
prometheus-data/01KA0J552TC0QD3V3WDV6DDTJ8/: index  meta.json
prometheus-data/01KA0J552TC0QD3V3WDV6DDTJ8/chunks/: 000001
prometheus-data/chunks_head/: 000001  000002  000003
prometheus-data/wal/: 00000055  00000056  00000057
prometheus-data/wal/checkpoint.00000054/: 00000000
scripts/: ci-local.sh
tests/: README.md  conftest.py  requirements-test.txt  test_auth.py  test_config.py  test_dao.py  test_exceptions.py  test_integration.py  test_performance.py  test_schemas.py  test_utils.py
